@@ -3,14 +3,15 @@ import java.util.*;
 
 public class HashSetLotto {
     public static void main(String[] args) {
-        Set set = new HashSet();
+        Set<Integer> set = new HashSet<>();
 
-        for(int i=0;set.size()<6;i++){
-            int num = (int)(Math.random()*45)+5;
-            set.add(new Integer(num));
+        // int i가 직접 쓰지 않아서 Iterator로 변경
+        Iterator<Integer> it = set.iterator();
+        while(it.hasNext() || set.size()<6){
+            set.add(Integer.valueOf((int)(Math.random()*45)+5));
         }
 
-        List list = new LinkedList(set);
+        List<Integer> list = new LinkedList<Integer>(set);
         Collections.sort(list);
         System.out.println(list);
     }
